update ui in xml with re impl of login ux

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="title_activity_list_patients">ListPatientsActivity</string>
     <string name="please_wait_txt">Espere por favor</string>
     <string name="loading_txt">Cargando...</string>
+    <string name="forgot_password">Olvidaste tu contraseña?</string>
+    <string name="patients">Mis pacientes</string>
+    <string name="doctors">Doctores</string>
+    <string name="add_patient">Agregar paciente</string>
+    <string name="add_doctor">Agregar doctor</string>
 </resources>
